# soma_integrate

./: pyproject.toml
src/soma_integ/: __init__.py  basemodel.py  config.py  data.py  evaluation.py  methods.py  model.py  optimization.py  utils.py
tests/: test_data.py  test_evaluation.py
